--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-    "name": "foodbridge-backend",
-    "version": "1.0.0",
-    "description": "Backend for FoodBridge Redistribution Platform",
-    "main": "server.js",
+    "name": "foodbridge-web",
+    "private": true,
+    "version": "0.1.0",
+    "type": "module",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
-        "seed": "node seed.js"
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
     },
     "dependencies": {
-        "axios": "^1.13.5",
-        "bcryptjs": "^2.4.3",
-        "cloudinary": "^1.41.0",
-        "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.2",
-        "helmet": "^7.1.0",
-        "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.0.0",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.5-lts.1",
-        "multer-storage-cloudinary": "^4.0.0",
-        "nodemailer": "^6.9.7",
-        "socket.io": "^4.7.2"
+        "axios": "^1.6.0",
+        "leaflet": "^1.9.4",
+        "lucide-react": "^0.284.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-leaflet": "^4.2.1",
+        "react-router-dom": "^6.18.0",
+        "recharts": "^2.9.0",
+        "socket.io-client": "^4.7.2"
     },
     "devDependencies": {
-        "nodemon": "^3.0.1"
+        "@types/react": "^18.2.37",
+        "@types/react-dom": "^18.2.15",
+        "@vitejs/plugin-react": "^4.2.0",
+        "autoprefixer": "^10.4.16",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.5",
+        "vite": "^5.0.0"
     }
 }
